# django-nopassword

./: CONTRIBUTING.rst  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
docs/: changelog.rst  conf.py  customizing.rst  settings.rst  spelling_wordlist.txt  templates.rst
nopassword/: backends.py  forms.py  signing.py  urls.py  views.py
nopassword/contrib/admin/: __init__.py  admin.py  apps.py  views.py
nopassword/contrib/admin/templates/nopassword_admin/: login.html
nopassword/migrations/: 0002_remove_models.py
tests/: settings.py  test_signing.py  urls.py
