[metadata]
version = attr: nopassword.__version__
long_description = file: README.rst

[options]
include_package_data = True

[wheel]
universal = 1

[flake8]
max-line-length=100
exclude=docs/conf.py,.tox,tests/local.py

[isort]
line_length = 100
skip = .tox,venv
default_section = THIRDPARTY
known_first_party = nopassword,tests

[semantic_release]
version_variable = nopassword/__init__.py:__version__
major_tag = [major]
minor_tag = [minor]
patch_tag = [patch]

[build_sphinx]
source-dir = docs
build-dir = docs/_build
project = django-nopassword
copyright = 2014, Rolf Erik Lekang
